# NOUS

./: .gitignore  CAS_SPEC.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SYNTAX.md  THIRD_PARTY_LICENSES.md  index.html  m5-continuation-prompt.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: ci.yml
docs/dev/: Addition_M6_checkpoint_info.md  M10_checkpoint_prompt.md  M6_checkpoint_prompt_1.md  M8_checkpoint_prompt.md  M9_5_checkpoint_prompt.md  M9_checkpoint_prompt.md  SESSION_HANDOFF.md  clean-clone-verification-2026-07-10.md  licensing-audit.md  session_sweep_frontend_autopush_prompt.md
scripts/: fuzz-nous.mjs
scripts/git-hooks/: post-commit
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src/cas/: differentiate.ts  engine.ts  integrate.ts  limit.ts  rational.ts  simplify.ts  solve.ts
src/core/: ast.ts  autocomplete.ts  compile.ts  errors.ts  evaluator.ts  funcdef.ts  inline.ts  lexer.ts  names.ts  parser.ts
src/platform/: autosave.ts  errorlog.ts  files.ts
src/plot/: analysis.ts  exportSvg.ts  implicit.ts  marks.ts  parametric.ts  poi.ts  regress.ts  render.ts  sampler.ts  ticks.ts  trace.ts  viewport.ts
src/state/: autosave.ts  document.ts  history.ts  serialize.ts  sliderAnim.ts  workspace.ts
src/ui/: DocActions.tsx  ExpressionRow.tsx  FolderRow.tsx  GraphCanvas.tsx  ShortcutsPanel.tsx  analyze.ts  docMenu.ts  exportName.ts  (+4 more)
(+37 files in other folders)
