[package]
name = "gcalc"
version = "0.0.1"
description = "Free, open-source desktop graphing calculator"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
