[package]
name = "nous"
version = "0.1.0"
description = "Free, open-source desktop graphing calculator"
authors = ["NOUS contributors"]
repository = "https://github.com/ICXC-NIKA-DNR/NOUS"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
